# co2-emmisions

./: .env  .env.example  .gitignore  README.md  app.py  cc.py  co2_emission_model.pkl  compose.yaml  db.py  main.ipynb  main.py  mine.ipynb  models.py  pyproject.toml
data/: cleaned_df.csv  countries.csv  economic_data.csv  emissions.csv
eda/: cc.ipynb
