[project]
name = "co2-emmisions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.4.0",
    "asyncpg>=0.30.0",
    "ipykernel",
    "joblib>=1.5.1",
    "jupytext>=1.17.2",
    "matplotlib>=3.10.3",
    "plotly>=6.1.2",
    "polars>=1.30.0",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "sqlmodel>=0.0.24",
    "streamlit>=1.45.1",
]
